WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279398
[Site Isolation] Cross-site iframes nested within same-site iframes cannot receive mouse events
https://bugs.webkit.org/show_bug.cgi?id=279398
Summary
[Site Isolation] Cross-site iframes nested within same-site iframes cannot re...
Charlie Wolfe
Reported
2024-09-09 17:09:56 PDT
The `passMouseXEventToSubframe()` function is used to send mouse events to local iframes, but it may later hit test to an out-of-process iframe. In such cases, the function must return a `HandleUserInputEventResult` so we can tell the UI process to forward the event.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-09-09 17:10:08 PDT
<
rdar://problem/135613422
>
Charlie Wolfe
Comment 2
2024-09-09 17:11:52 PDT
rdar://135438488
Charlie Wolfe
Comment 3
2024-09-09 17:13:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33354
EWS
Comment 4
2024-09-09 21:36:41 PDT
Committed
283389@main
(1656a6f556cd): <
https://commits.webkit.org/283389@main
> Reviewed commits have been landed. Closing PR #33354 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug