[Site Isolation] Cross-site iframes nested within same-site iframes cannot receive mouse events https://bugs.webkit.org/show_bug.cgi?id=279398 rdar://135438488

Reviewed by Alex Christensen.

The `passMouseXEventToSubframe()` function is used to send mouse events to local iframes, but it may
later hit test an out-of-process iframe. In such cases, the function must return a
`HandleUserInputEventResult` so we can tell the UI process to forward the event.

* LayoutTests/http/tests/site-isolation/mouse-events/iframe-within-srcdoc-expected.txt: Added.
* LayoutTests/http/tests/site-isolation/mouse-events/iframe-within-srcdoc.html: Added.
* LayoutTests/http/tests/site-isolation/mouse-events/resources/message-top-mouse-event-type.html: Added.
* Source/WebCore/page/EventHandler.cpp:
(WebCore::EventHandler::handleMousePressEvent):
(WebCore::EventHandler::handleMouseDoubleClickEvent):
(WebCore::EventHandler::handleMouseMoveEvent):
(WebCore::EventHandler::handleMouseReleaseEvent):
(WebCore::EventHandler::passMousePressEventToSubframe):
(WebCore::EventHandler::passMouseReleaseEventToSubframe):
(WebCore::EventHandler::passMouseMoveEventToSubframe):
* Source/WebCore/page/EventHandler.h:
* Source/WebCore/page/ios/EventHandlerIOS.mm:
(WebCore::EventHandler::passMousePressEventToSubframe):
(WebCore::EventHandler::passMouseMoveEventToSubframe):
(WebCore::EventHandler::passMouseReleaseEventToSubframe):
* Source/WebCore/page/mac/EventHandlerMac.mm:
(WebCore::EventHandler::passMousePressEventToSubframe):
(WebCore::EventHandler::passMouseMoveEventToSubframe):
(WebCore::EventHandler::passMouseReleaseEventToSubframe):
* Source/WebCore/page/win/EventHandlerWin.cpp:
(WebCore::EventHandler::passMouseMoveEventToSubframe):

Canonical link: https://commits.webkit.org/283389@main